src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__schema_tab_modals__add_entry_modal_renders_80x24.snap
---
source: src/tui/snapshot_tests/schema_tab_modals.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"          ╔══════════════════════[ Add agent ]═══════════════════════╗          "
"          ║Identifier (a-z, 0-9, -, _):                              ║          "
"          ║>                                                         ║          "
"          ║                                                          ║          "
"          ║                                                          ║          "
"          ║               [Enter] confirm  [Esc] cancel              ║          "
"          ║                                                          ║          "
"          ║                                                          ║          "
"          ╚══════════════════════════════════════════════════════════╝          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
