src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__schema_tab_modals__remove_confirm_modal_renders_80x24.snap
---
source: src/tui/snapshot_tests/schema_tab_modals.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"          ╔═════════════════════[ Remove entry ]═════════════════════╗          "
"          ║                                                          ║          "
"          ║                  Delete [agents.claude]?                 ║          "
"          ║                                                          ║          "
"          ║                [y] confirm  [n/Esc] cancel               ║          "
"          ║                                                          ║          "
"          ╚══════════════════════════════════════════════════════════╝          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
